--- a/config.env
+++ b/config.env
@@ -1,2 +1,2 @@
-DATABASE_URL="mongodb+srv://dbCloud:<PASSWORD>@cluster0-zz6zx.mongodb.net/Login?retryWrites=true&w=majority"
-DATABASE_PASSWORD=9948686620Aa
+DATABASE_URL="Your URL"
+DATABASE_PASSWORD=Your_Password
